# PA2

./: CMakeLists.txt  Tree_to_nnf.cc  Tree_to_nnf.h  Tseitin_transform.cc  Tseitin_transform.h  dpll.cc  dpll.h  main.cc  parser.cc  parser.h  satSolver.cc  satSolver.h  tokenizer.cc  tokenizer.h  treeNode.cc  treeNode.h
